[gd_scene load_steps=42 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprite/Dark/texture_01.png" type="Texture" id=2]
[ext_resource path="res://sprite/Dark/texture_07.png" type="Texture" id=3]
[ext_resource path="res://floor_gravity_changer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprite/Dark/texture_09.png" type="Texture" id=5]
[ext_resource path="res://sprite/Dark/texture_08.png" type="Texture" id=6]
[ext_resource path="res://call_elevator_interact.tscn" type="PackedScene" id=7]
[ext_resource path="res://elevator.gd" type="Script" id=8]
[ext_resource path="res://sprite/Dark/texture_06.png" type="Texture" id=9]
[ext_resource path="res://move_elevator_interact.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprite/TexturesCom_Snow_Fresh_512_albedo.png" type="Texture" id=11]
[ext_resource path="res://textbox.gd" type="Script" id=12]
[ext_resource path="res://sprite/TexturesCom_Snow_Fresh_512_normal.png" type="Texture" id=13]
[ext_resource path="res://3d/first_building.tscn" type="PackedScene" id=14]
[ext_resource path="res://item.tscn" type="PackedScene" id=15]
[ext_resource path="res://world_env1.tres" type="Environment" id=16]
[ext_resource path="res://snow.png" type="Texture" id=17]
[ext_resource path="res://sfx/polar_wind.wav" type="AudioStream" id=18]
[ext_resource path="res://sfx/elevator.wav" type="AudioStream" id=19]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 11 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 13 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 5 )
uv1_scale = Vector3( 6, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 6 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.6, 0.0431373, 0.0431373, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.682353, 0.0117647, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.9, 0.1, 0.9 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.368627, 0.368627, 0.368627, 1 )
albedo_texture = ExtResource( 9 )
uv1_triplanar = true

[sub_resource type="CylinderShape" id=11]
radius = 0.05
height = 0.0269693

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.54902, 0.54902, 0.54902, 1 )

[sub_resource type="Animation" id=13]
length = 2.0
tracks/0/type = "audio"
tracks/0/path = NodePath("sound_player")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 23.5,
"stream": ExtResource( 19 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=14]
length = 15.0
loop = true
step = 0.01
tracks/0/type = "audio"
tracks/0/path = NodePath("sound_player")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 3.1,
"stream": ExtResource( 19 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 15 )
}

[sub_resource type="Animation" id=15]
length = 1.2
tracks/0/type = "audio"
tracks/0/path = NodePath("sound_player")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.14,
"stream": ExtResource( 19 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 1.2 )
}

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 11 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 13 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=17]
albedo_texture = ExtResource( 11 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 13 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=18]
extents = Vector3( 1, 0.05, 0.1 )

[sub_resource type="BakedLightmapData" id=19]
bounds = AABB( -10, -10, -21.1871, 20, 20, 42.3742 )
cell_space_transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 40, 40, 84.7484 )
cell_subdiv = 9
octree = PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255 )

[sub_resource type="SpatialMaterial" id=20]
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 17 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 5 )
spread = 0.0
gravity = Vector3( 50, -100, 0 )

[sub_resource type="PlaneMesh" id=22]
size = Vector2( 0.2, 0.2 )

[node name="world" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.937719, 0.260981, 0.229285, -0.347394, 0.704464, 0.618909, 0, -0.660015, 0.751253, 0, 4.65168, 0 )
visible = false
editor_only = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 16 )

[node name="maps" type="Spatial" parent="."]

[node name="ground" type="CSGCombiner" parent="maps"]
use_collision = true

[node name="CSGBox" type="CSGBox" parent="maps/ground"]
use_collision = true
width = 10.0
height = 0.1
depth = 30.0
material = SubResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="maps/ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.04803, 0.953782, 0 )
use_collision = true
width = 0.1
depth = 30.0
material = SubResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="maps/ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.04869, 0.953782, 0 )
use_collision = true
width = 0.1
depth = 30.0
material = SubResource( 2 )

[node name="hill" type="CSGCombiner" parent="maps"]
material_override = SubResource( 3 )
use_collision = true

[node name="CSGPolygon" type="CSGPolygon" parent="maps/hill"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.99737, 0.0239085, -13.0021 )
polygon = PoolVector2Array( 0.0166035, 0.986927, 0.939362, 0.59028, 1.58318, 0.0296755, 0, 0 )
depth = 10.0
smooth_faces = true
material = SubResource( 4 )

[node name="CSGBox" type="CSGBox" parent="maps/hill"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.521303, -13.9793 )
width = 10.0
height = 1.0
material = SubResource( 5 )

[node name="tower" type="CSGCombiner" parent="maps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.92517, 0, -2.62287 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00680268, 3.52822, -0.00658736 )
height = 7.0
material = SubResource( 6 )

[node name="CSGBox2" type="CSGBox" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0361321, 3.51618, -0.0016911 )
operation = 2
width = 1.8
height = 7.0
depth = 1.8
material = SubResource( 6 )

[node name="CSGBox3" type="CSGBox" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.953417, 1.02186, -0.00922617 )
operation = 2
width = 0.1
depth = 1.8
material = SubResource( 6 )

[node name="CSGBox4" type="CSGBox" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.953417, 6.29911, -0.00922608 )
operation = 2
width = 0.1
height = 1.3
depth = 1.8
material = SubResource( 6 )

[node name="CSGBox5" type="CSGBox" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.23119, 5.60361, -0.00498867 )
width = 0.5
height = 0.1
material = SubResource( 6 )

[node name="call_elevator_button" type="CSGCombiner" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.83629, 0.41787, 0.86855 )

[node name="CSGBox" type="CSGBox" parent="maps/tower/call_elevator_button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00844193, 0 )
width = 0.2
height = 0.2
depth = 0.05
material = SubResource( 7 )

[node name="CSGCylinder" type="CSGCylinder" parent="maps/tower/call_elevator_button"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0154173, -0.0274987 )
radius = 0.05
height = 0.05
material = SubResource( 8 )

[node name="call_elevator_interact" parent="maps/tower/call_elevator_button" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0255384, -0.093732 )
active = false
target_elevator = NodePath("../../../elevator")

[node name="call_elevator_button2" type="CSGCombiner" parent="maps/tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.83629, 5.94873, 0.86855 )

[node name="CSGBox" type="CSGBox" parent="maps/tower/call_elevator_button2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00844193, 0 )
width = 0.2
height = 0.2
depth = 0.05
material = SubResource( 7 )

[node name="CSGCylinder" type="CSGCylinder" parent="maps/tower/call_elevator_button2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0154173, -0.0274987 )
radius = 0.05
height = 0.05
material = SubResource( 8 )

[node name="call_elevator_interact" parent="maps/tower/call_elevator_button2" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0255384, -0.093732 )
target_elevator = NodePath("../../../elevator")
target_floor = 1

[node name="elevator" type="CSGCombiner" parent="maps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, 0, -2.622 )
script = ExtResource( 8 )
time = 3.0
floor_position = NodePath("../elevators_floor_position")

[node name="floor_gravity_changer" parent="maps/elevator" instance=ExtResource( 4 )]

[node name="StaticBody" type="StaticBody" parent="maps/elevator"]
collision_layer = 2147483648

[node name="CollisionShape" type="CollisionShape" parent="maps/elevator/StaticBody"]
shape = SubResource( 9 )

[node name="platform" type="CSGBox" parent="maps/elevator"]
use_collision = true
width = 1.7
height = 0.246092
depth = 1.73863
material = SubResource( 10 )

[node name="move_elevator_button" type="CSGCombiner" parent="maps/elevator/platform"]
transform = Transform( 7.54979e-08, 0, 1, 0, 1, 0, -1, 0, 7.54979e-08, 0.568424, 0.41787, 0.0227418 )

[node name="CSGBox" type="CSGBox" parent="maps/elevator/platform/move_elevator_button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00844193, 0 )
width = 0.2
height = 0.2
depth = 0.05
material = SubResource( 7 )

[node name="CSGCylinder" type="CSGCylinder" parent="maps/elevator/platform/move_elevator_button"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0154173, -0.0274987 )
radius = 0.05
height = 0.05
material = SubResource( 8 )

[node name="move_elevator_interact" parent="maps/elevator/platform/move_elevator_button" instance=ExtResource( 10 )]
target_elevator = NodePath("../../..")

[node name="CollisionShape" parent="maps/elevator/platform/move_elevator_button/move_elevator_interact" index="0"]
transform = Transform( 1, -7.54979e-08, -7.54979e-08, 7.54979e-08, -4.37114e-08, 1, -7.54979e-08, -1, -4.37114e-08, 0, -0.0109974, 0.0536404 )
shape = SubResource( 11 )

[node name="CSGBox2" type="CSGBox" parent="maps/elevator/platform/move_elevator_button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.114593, 0.0801883 )
width = 0.3
height = 0.5
depth = 0.1
material = SubResource( 12 )

[node name="Tween" type="Tween" parent="maps/elevator"]

[node name="SpotLight" type="SpotLight" parent="maps/elevator"]
transform = Transform( 0.975149, 9.68419e-09, -0.221548, 0.221548, -4.26251e-08, 0.975149, 0, -1, -4.37114e-08, -0.370581, 1.81374, 0 )
spot_range = 2.0845
spot_attenuation = 0.63728
spot_angle = 42.3479

[node name="sound_player" type="AudioStreamPlayer3D" parent="maps/elevator"]
stream = ExtResource( 19 )

[node name="sound_animation" type="AnimationPlayer" parent="maps/elevator"]
anims/finish = SubResource( 13 )
anims/progress = SubResource( 14 )
anims/start = SubResource( 15 )

[node name="elevators_floor_position" type="Node" parent="maps"]

[node name="floor_1" type="Position3D" parent="maps/elevators_floor_position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, 0, -2.622 )

[node name="floor_2" type="Position3D" parent="maps/elevators_floor_position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9, 5.6, -2.622 )

[node name="CSGBox" type="CSGBox" parent="maps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0049417, 0.532089 )
use_collision = true
width = 10.0
height = 0.1
depth = 23.8079
material = SubResource( 16 )

[node name="CSGPolygon" type="CSGPolygon" parent="maps"]
transform = Transform( 0.725543, 0, 0.688177, 0, 1, 0, -0.688177, 0, 0.725543, 2.30583, 0.00539958, -8.18234 )
use_collision = true
polygon = PoolVector2Array( 0, 0, 0, 1, 1.98724, -0.0386224 )
material = SubResource( 17 )

[node name="OmniLight6" type="OmniLight" parent="maps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.03133, -13.0441 )
omni_attenuation = 3.24901

[node name="first_building" parent="maps" instance=ExtResource( 14 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -4.92021, 0.112099, -4.06492 )

[node name="SpotLight2" type="SpotLight" parent="maps/first_building"]
transform = Transform( 0.2, 8.74228e-09, 8.74228e-09, -8.74228e-09, -8.74228e-09, 0.2, 8.74228e-09, -0.2, -8.74228e-09, 0.432693, 2.01632, 0.102146 )
light_color = Color( 1, 0.803922, 0.462745, 1 )
spot_range = 3.48591
spot_angle = 40.1988

[node name="OmniLight" type="OmniLight" parent="maps/first_building"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.453862, 1.91897, 0.1088 )
light_color = Color( 1, 0.94902, 0.713726, 1 )
light_energy = 16.0
omni_range = 0.437705

[node name="SpotLight" type="SpotLight" parent="maps/first_building"]
transform = Transform( 0.193185, 0.0448288, 0.0258819, 0.0149769, -0.144129, 0.137849, 0.0495498, -0.131214, -0.142575, 0, 0.839149, -0.430567 )
spot_range = 11.9203
spot_attenuation = 3.03143

[node name="StaticBody" type="StaticBody" parent="maps/first_building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44283, 0.11281 )

[node name="CollisionShape" type="CollisionShape" parent="maps/first_building/StaticBody"]
shape = SubResource( 18 )

[node name="first_building2" parent="maps" instance=ExtResource( 14 )]
transform = Transform( 6.55671e-07, 0, -5, 0, 5, 0, 5, 0, 6.55671e-07, 4.45352, 0.112099, 6.27503 )

[node name="SpotLight" type="SpotLight" parent="maps/first_building2"]
transform = Transform( 0.193185, 0.0448288, 0.0258819, 0.0149769, -0.144129, 0.137849, 0.0495498, -0.131214, -0.142575, 0, 0.839149, -0.430567 )
spot_range = 11.9203
spot_attenuation = 3.03143

[node name="StaticBody" type="StaticBody" parent="maps/first_building2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44283, 0.11281 )

[node name="CollisionShape" type="CollisionShape" parent="maps/first_building2/StaticBody"]
shape = SubResource( 18 )

[node name="SpotLight3" type="SpotLight" parent="maps/first_building2"]
transform = Transform( -0.2, -2.62268e-08, -8.74228e-09, -8.74228e-09, -8.74228e-09, 0.2, -2.62268e-08, 0.2, 8.74228e-09, -0.74159, 2.01632, 0.107026 )
light_color = Color( 1, 0.803922, 0.462745, 1 )
spot_range = 3.48591
spot_angle = 40.1988

[node name="OmniLight2" type="OmniLight" parent="maps/first_building2"]
transform = Transform( -0.2, 0, 1.74846e-08, 0, 0.2, 0, -1.74846e-08, 0, -0.2, -0.762759, 1.91897, 0.100372 )
light_color = Color( 1, 0.94902, 0.713726, 1 )
light_energy = 16.0
omni_range = 0.437705

[node name="textbox" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="textbox"]
margin_left = 74.0
margin_top = 366.0
margin_right = 951.0
margin_bottom = 571.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="RichTextLabel" parent="textbox"]
margin_left = 87.0
margin_top = 380.0
margin_right = 509.0
margin_bottom = 465.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "Hi I'm text box"
text = "Hi I'm text box"

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.99792, 0, 0.0644633, 0, 1, 0, -0.0644633, 0, -0.99792, -1.7602, 0.565765, -6.51939 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.34254 )
bake_extents = Vector3( 10, 10, 21.1871 )
light_data = SubResource( 19 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.98374, -1.5068 )
material_override = SubResource( 20 )
amount = 500
visibility_aabb = AABB( -2.81254, -4, -8.75884, 5.62508, 8, 17.5177 )
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 22 )

[node name="snow_storm_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="item" parent="." instance=ExtResource( 15 )]
transform = Transform( -0.199093, 0, -0.0190266, 0, 0.2, 0, 0.0190266, 0, -0.199093, -1.18875, 0.287504, -1.97326 )
[connection signal="call_elevator" from="maps/tower/call_elevator_button/call_elevator_interact" to="maps/elevator" method="_move"]
[connection signal="call_elevator" from="maps/tower/call_elevator_button2/call_elevator_interact" to="maps/elevator" method="_move"]
[connection signal="buttons_toggle" from="maps/elevator" to="maps/tower/call_elevator_button/call_elevator_interact" method="active_switch"]
[connection signal="buttons_toggle" from="maps/elevator" to="maps/tower/call_elevator_button2/call_elevator_interact" method="active_switch"]
[connection signal="buttons_toggle" from="maps/elevator" to="maps/elevator/platform/move_elevator_button/move_elevator_interact" method="active_switch"]
[connection signal="move_elevator" from="maps/elevator/platform/move_elevator_button/move_elevator_interact" to="maps/elevator" method="_move"]
[connection signal="tween_all_completed" from="maps/elevator/Tween" to="maps/elevator" method="tween_all_completed"]
[connection signal="animation_finished" from="maps/elevator/sound_animation" to="maps/elevator" method="sound_animation_finished"]

[editable path="maps/elevator/platform/move_elevator_button/move_elevator_interact"]
